# b0

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  cleanup.sh  pyproject.toml  start_clean.sh
.agent/: instructions.md
.github/: pull_request_template.md
.github/workflows/: docker-publish.yml
b0/: agent.py  auth.py  cli.py  config.py  llm.py  telegram.py  tools.py
b0/templates/: AGENT.md  COACH.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md
tests/: test_modes.py
