[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "b0"
version = "0.1.0"
description = "A standard Python project"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "typer==0.24.1",
    "python-dotenv==1.2.2",
    "litellm==1.82.0",
    "requests==2.32.5",
    "python-telegram-bot[job-queue]==22.6",
    "telegramify-markdown==0.5.4",
]

[project.optional-dependencies]
test = [
    "pytest==9.0.2",
]

[project.scripts]
b0 = "b0.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["b0*"]

[tool.setuptools.package-data]
"b0.templates" = ["*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
